--- a/formmodel/templates/testapp/student.html
+++ b/formmodel/templates/testapp/student.html
@@ -7,8 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
+<h3>Student Records</h3>
+    <table class="table table-bordered">
+        <tr>
+            <th>Rollno</th>
+            <th>Name</th>
+            <th>Marks</th>
+            <th>Add</th>
+        </tr>
+        {% for student in stu_list %}
+        <tr>
+            <td>{{student.rollno}}</td>
+            <td>{{student.name}}</td>
+            <td>{{student.marks}}</td>
+            <td>{{student.add}}</td>
+        </tr>
+        {% endfor %}
+    </table>
 
-    
     
 </body>
 </html>
